# stop-politicizing-bot

./: .gitignore  Cargo.toml  README.md  build_wasm.sh  index.js  package.json
src/: lib.rs  words.txt
